# supremeai

./: .antigravity  .antigravityrules  .commitlintrc.json  .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci.yml  .kilo_agent.md  .kiloignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  00_START_HERE_TEACHING_INDEX.md  ADMIN.md  ADMIN_COMPLETE_GUIDE.md  ADMIN_CONTROL_COMPLETE_GUIDE.md  ADMIN_DASHBOARD_API_REFERENCE.md  ADMIN_DASHBOARD_COMPLETE.md  ADMIN_DASHBOARD_IMPLEMENTATION_COMPLETE.md  ADMIN_DASHBOARD_IMPLEMENTATION_GUIDE.md  ADMIN_DASHBOARD_QUICKSTART.md  ADMIN_OPERATIONS_GUIDE.md  AGENT.md  AGENTS.md  AIAPIService.java  AI_GUIDE.md  AI_PROVIDER_AUDIT.md  ALERT_CONFIGURATION.md  API_REFERENCE.md  APP_GENERATION_ASSESSMENT.md  ARCHITECTURE.md  ARCHITECTURE_AND_IMPLEMENTATION.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_SIMPLIFICATION_LOG.md  AUTHENTICATION_GUIDE.md  AUTH_QUICK_START.md  AUTH_STRATEGY_RECOMMENDATION.md  (+487 more)
backend/: .coverage.DESKTOP-K5CDIUD.pid3020.XmYnvBPx.HBkSnOfvEXAh  .coverage.DESKTOP-K5CDIUD.pid3020.XyRNQLnx.HNQIp837rWOh  .coverage.DESKTOP-K5CDIUD.pid6964.XIZOmcgx.HaLyBxrypHTh  .coverage.DESKTOP-K5CDIUD.pid6964.XMyGtKex.HNQIp837rWOh  .coverage.DESKTOP-K5CDIUD.pid7124.XqLvYU4x.HRO2MK6qNGLh  .coverage.DESKTOP-K5CDIUD.pid7124.Xw1AOcGx.HNQIp837rWOh  .dockerignore  .gcloudignore  Dockerfile  README.md  config.py  coverage.xml  fix_tests.py  main.py  mypy.ini  pyproject.toml  ruff_errors.txt  test_tmp_check_routes.py  tmp_check_routes.py
backend/adaptive_engine/: __init__.py  experience_db.py  intent_parser.py  learning_loop.py  platform_learner.py  registry.py  test_platform_learner.py
backend/admin/: __init__.py  god.py  test_god.py
backend/agents/: __init__.py  crew_departments.py  legal_agent.py  medical_agent.py  research_assistant.py  test_legal_agent.py  test_medical_agent.py  trading_agent.py
backend/alembic/: env.py
backend/api/: __init__.py  dependencies.py  marketplace.py
backend/brain/: __init__.py  agent_department.py  agent_departments.py  api_router.py  autonomous_agent.py  crewai_agents.py  gcp_router.py  langgraph_agent.py  mcp_client.py  model_registry.py  model_router.py  nine_router.py  parallel_cloud_router.py  performance_aware_router.py  reasoning_orchestrator.py  swarm_orchestrator.py
backend/byoc/: cloud_connector.py  container_orchestrator.py  resource_manager.py
backend/config/: byoc_limits.json  pricing_tiers.json  routing_policy.json
backend/core/: __init__.py  admin_god.py  admin_routes.py  agent_orchestrator.py  api_key_middleware.py  api_key_rate_limiter.py  app.py  audit_logger.py  auth_middleware.py  auto_remediation.py  circuit_breaker.py  cloud_postgres_store.py  cloud_sandbox_orchestrator.py  cloud_storage.py  cloud_vector_store.py  code_validator.py  config.py  constants.py  db_repository.py  decision_engine.py  discord_bot.py  docker-compose.yml  email_service.py  error_pattern_db.py  error_remediation.py  events.py  evolution_engine.py  factual_verifier.py  feedback_loop.py  free_tier_tracker.py  gcp_firestore.py  gcp_pubsub_queue.py  generation_monitor.py  grpc_client.py  health_monitor.py  honeypot_middleware.py  idempotency_middleware.py  immune_system.py  input_sanitizer.py  intent.py  (+43 more)
backend/database/: __init__.py  session.py  storage_client.py  supabase_client.py
backend/engine/: cost_optimizer.py  model_dispatcher.py
backend/evolution/: __init__.py  auto_skill_creator.py  auto_update_manager.py  dynamic_injector.py  fitness_engine.py  master_planner.py  security_sandbox.py  self_evolution_agent.py  skill_graph.py
backend/memory/: __init__.py  checkpoint_resume.py  chromadb_store.py  cloud_postgres_store.py  cloud_vector_store.py  episodic_memory.py  long_term_memory.py  rag_pipeline.py  sliding_window.py  sqlite_store.py  summary_tree.py  supabase_store.py  vector_store_config.py
backend/middleware/: auth_middleware.py  chaos_injector.py  idempotency.py
backend/models/: admin.py  api_key.py  byoc_payloads.py  ci_report.py  deployment_logs.py  evolution.py  local_model_handler.py  pending_tasks.py  shared_workspace.py  transaction_ledger.py  voice_interaction.py  wallet.py
backend/monitoring/: cost_auditor.py
backend/p2p/: credit_system.py  secure_tunnel.py
backend/reports/: optimization_engine.py
backend/scout/: knowledge_extractor.py  web_crawler_agent.py
backend/scripts/: __init__.py  check_ollama.py  load_seed_data.py  run_dependency_check.py  seed_tools_registry.py  self_healing_tests.py
backend/skills/: provisioner.py  skill_registry.py
backend/storage/: __init__.py  asset_manager.py  r2_storage_client.py
backend/tests/: __init__.py  conftest.py  test_adaptive_engine.py  test_admin_models.py  test_advanced.py  test_agent_department.py  test_agent_departments.py  test_agent_orchestrator.py  test_agents_crew_departments.py  test_api.py  test_api_chat.py  test_api_keys.py  test_api_new_endpoints.py  test_api_router.py  test_audit_logger.py  test_auth_routes.py  test_auto_fix_trigger.py  test_auto_skill_creator.py  test_autonomous_agent.py  test_bangla_nlp.py  test_bangla_voice.py  test_billing_system.py  test_brain.py  test_browser_credentials.py  test_byoc_endpoints.py  test_chaos_worker.py  test_checkpoint_resume.py  test_circuit_breaker.py  test_cloud_sandbox.py  test_code_validator.py  test_collaborative_editor.py  test_config.py  test_config_additional.py  test_constants.py  test_context_and_actions.py  test_core.py  test_coverage_gaps.py  test_crew_mcp.py  test_database_storage_client.py  test_db_repository.py  (+96 more)
backend/tools/: 3d_model_generator.py  __init__.py  _bootstrap.py  agent_tools.py  ai_federation_protocol.py  ai_pair_programmer.py  api_gateway.py  auto_coverage_improver.py  auto_pr_pipeline.py  auto_test_generator.py  bandwidth_optimizer.py  bangla_ai_connector.py  bangla_nlp.py  bangla_voice.py  benchmark_agent.py  bengali_ocr_converter.py  blockchain_agent.py  cli.py  (+79 more)
gitingest/: .env.example  __init__.py  config.py  deploy_cloudrun.sh  pyproject.toml  requirements.txt  test_structure.py
(+6028 files in other folders)
