[tool.poetry]
name = "supremeai-backend"
version = "2.0.0"
description = "SupremeAI 2.0 — FastAPI AI Backend"
authors = ["SupremeAI Team <team@supremeai.dev>"]
readme = "README.md"
package-mode = false
packages = [{include = "core"}, {include = "brain"}, {include = "api"}, {include = "memory"}, {include = "tools"}]

[tool.poetry.dependencies]
# ── Core API (always needed, ~500 MB) ──
python = "^3.11"
numpy = ">=1.24.0,<2.0.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
loguru = "^0.7.2"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
tenacity = "^9.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
openai = "^1.35.0"
supabase = "^2.5.0"
upstash-redis = "^1.1.0"
google-cloud-firestore = "^2.16.0"
google-cloud-pubsub = "^2.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.0"
asyncpg = "^0.29.0"
sse-starlette = "^1.8.0"
prometheus-client = "^0.20.0"
pygithub = "^2.9.1"
google-generativeai = "^0.8.3"
firebase-admin = "^6.5.0"
stripe = "^9.0.0"
posthog = "^3.5.0"
requests = "^2.31.0"
typer = "^0.12.0"
rich = "^13.0.0"
pillow = "^10.0.0"
psutil = "^5.9.0"
sympy = "^1.13.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
discord-py = "^2.3.0"
setuptools = "<82.0.0"

[tool.poetry.group.ml.dependencies]
# ── ML/AI: torch, OCR, whisper, embeddings (~3 GB) ──
# Install with: poetry install --with ml
torch = {version = "^2.0.0", optional = true}
torchvision = {version = ">=0.19.1", optional = true}
easyocr = "^1.7.0"
transformers = "^4.40.0"
sentence-transformers = "^2.2.0"
openai-whisper = "^20240930"
chromadb = "^0.4.0"
pinecone-client = "^5.0.0"
qdrant-client = "^1.9.0"

[tool.poetry.group.tools.dependencies]
# ── Optional tools: browser, cloud, analytics (~500 MB) ──
# Install with: poetry install --with tools
playwright = "^1.60.0"
playwright-stealth = "^1.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
matplotlib = "^3.8.0"
pdfplumber = "^0.10.0"
python-pptx = "^0.6.23"
gtts = "^2.5.1"
edge-tts = "^6.1.9"
boto3 = "^1.34.0"
docker = "^7.0.0"
celery = "^5.4.0"
redis = "^5.0.0"
radon = "^6.0.0"
networkx = "^3.2.0"
onelogin = "^1.1.0"
trl = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
anyio = "^4.0.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
# Enable a curated rule set — customize per project needs
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "SIM", "PL"]
ignore = ["B008", "C901", "PLR0913", "PLC0415", "PLR0912", "PLR0915", "PLR0911", "PLR2004", "PLW0603", "W291", "W293", "C414", "E731", "F811", "PLW2901", "PLW0108", "SIM103", "SIM108", "SIM117", "SIM112"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "W291", "W293", "B017", "SIM112", "S101", "S110", "S112", "S603", "S607", "C414", "E731", "F811", "PLC0207", "PLW2901", "SIM103", "SIM108", "SIM117", "PLW0108", "SIM115", "B007", "E501", "B904", "SIM102", "SIM105", "UP038", "PLR1714", "F841", "UP028", "A002", "I001", "UP006", "UP035"]
"tests/**" = ["E402", "W291", "W293", "B017", "SIM112", "S101", "S110", "S112", "S603", "S607", "C414", "E731", "F811", "PLC0207", "PLW2901", "SIM103", "SIM108", "SIM117", "PLW0108", "SIM115", "B007", "E501", "B904", "SIM102", "SIM105", "UP038", "PLR1714", "F841", "UP028", "A002", "I001", "UP006", "UP035"]
"tools/*" = ["E402", "W291", "W293", "B017", "SIM112", "S101", "S110", "S112", "S603", "S607", "C414", "E731", "F811", "PLC0207", "PLW2901", "SIM103", "SIM108", "SIM117", "PLW0108", "SIM115", "B007", "E501", "B904", "SIM102", "SIM105", "UP038", "PLR1714", "F841", "UP028", "A002", "I001", "UP006", "UP035"]
"tools/**" = ["E402", "W291", "W293", "B017", "SIM112", "S101", "S110", "S112", "S603", "S607", "C414", "E731", "F811", "PLC0207", "PLW2901", "SIM103", "SIM108", "SIM117", "PLW0108", "SIM115", "B007", "E501", "B904", "SIM102", "SIM105", "UP038", "PLR1714", "F841", "UP028", "A002", "I001", "UP006", "UP035"]
"core/app.py" = ["E402"]
"api/routes/*" = ["E402"]
"api/routes/**" = ["E402"]

[tool.ruff.lint.pylint]
max-branches = 20
max-statements = 80
max-returns = 10

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "venv", ".git", "build", "dist"]
