[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gitingest"
version = "1.0.0"
description = "Convert Git repositories into LLM-friendly text digests"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SupremeAI", email = "contact@supremeai.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["git", "llm", "ai", "repository", "digest", "prompt"]

# Core dependencies
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.19.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.26.0",
    "chardet>=5.0.0",
]

# Optional dependencies
[project.optional-dependencies]
s3 = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
logging = [
    "loguru>=0.7.0",
]
sentry = [
    "sentry-sdk>=1.39.0",
]
posthog = [
    "posthog>=3.0.0",
]
all = [
    "gitingest[s3,logging,sentry,posthog]",
]

[project.scripts]
gitingest = "gitingest.cli:main"

[project.urls]
Homepage = "https://github.com/supremeai/gitingest"
Repository = "https://github.com/supremeai/gitingest"
Documentation = "https://github.com/supremeai/gitingest#readme"
Issues = "https://github.com/supremeai/gitingest/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitingest*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"gitingest" = ["ui/templates/*.html", "ui/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
