[package]
name = "supremeai-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supremeai/supremeai_2.0"
homepage = "https://supremeai.dev"
description = "SupremeAI 2.0 Desktop Application"
authors = ["SupremeAI Team"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde_json = "1"
num_cpus = "1"
