[package]
name = "supremeai-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/supremeai/supremeai_2.0"
homepage = "https://supremeai.dev"
description = "SupremeAI 2.0 Desktop Application"
authors = ["SupremeAI Team"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0" }
serde_json = "1"
num_cpus = "1"
tauri-updater = { version = "0.4.3", features = [] }
ntapi = { version = "0.3.6" }